feat: add swagger's tags for handlers
